[gd_scene load_steps=7 format=3 uid="uid://bugai8bgxyfcg"]

[ext_resource type="Script" path="res://pong/pong.gd" id="1_g35od"]
[ext_resource type="PackedScene" uid="uid://d1jw08gsw3030" path="res://scenes/wall.tscn" id="2_nl7ah"]
[ext_resource type="PackedScene" uid="uid://hcic6jlp1n8k" path="res://scenes/paddles/paddleOne.tscn" id="3_2q7on"]
[ext_resource type="PackedScene" uid="uid://dam8s4w1ivrno" path="res://scenes/paddles/paddleTwo.tscn" id="4_vfb2x"]
[ext_resource type="PackedScene" uid="uid://bqi26t2081otm" path="res://scenes/paddles/ball.tscn" id="5_fgfvj"]
[ext_resource type="PackedScene" uid="uid://bmgmbxd3yecye" path="res://scenes/area_player.tscn" id="6_owjlt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_g35od")

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" parent="Walls" instance=ExtResource("2_nl7ah")]
position = Vector2(578, 40)
rotation = 1.5708
scale = Vector2(1, 11.6)

[node name="BottomWall" parent="Walls" instance=ExtResource("2_nl7ah")]
position = Vector2(576, 608)
rotation = 1.5708
scale = Vector2(1, 11.6)

[node name="Paddle" parent="." instance=ExtResource("3_2q7on")]
position = Vector2(15, 334)

[node name="PaddleTwo" parent="." node_paths=PackedStringArray("ball") instance=ExtResource("4_vfb2x")]
position = Vector2(1137, 334)
ball = NodePath("../Ball")

[node name="Ball" parent="." instance=ExtResource("5_fgfvj")]
position = Vector2(576, 332)

[node name="AreaPlayer" parent="." instance=ExtResource("6_owjlt")]
position = Vector2(-35, -6)

[node name="AreaPlayer2" parent="." instance=ExtResource("6_owjlt")]
position = Vector2(1187, 60)

[connection signal="point_scored" from="AreaPlayer" to="." method="_on_player_one_scored"]
[connection signal="point_scored" from="AreaPlayer2" to="." method="_on_area_player_2_point_scored"]
